--- a/index.html
+++ b/index.html
@@ -2,11 +2,17 @@
 layout: default
 title: Steve Jackson
 ---
-<div id="home">
-	<h1>Blog Posts</h1>
-	<ul class="posts">
-		{% for post in site.posts %}
-		<li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
-		{% endfor %}
-	</ul>
+{% for post in site.posts %}
+
+<div class="blog-post">
+<div class="left-split">
+  <div id="date"> {{ post.date | date_to_string }} </div>
 </div>
+
+<div class="right-split">
+  <h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
+  {{ post.content }} 
+</div>
+<div class="clear"></div>
+</div>
+{% endfor %}
