--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@ title: Steve Jackson
 {% for post in site.posts %}
 
 <div class="blog-post">
-<div class="left-split">
-  <div id="date"> {{ post.date | date_to_string }} </div>
-</div>
+  <div class="left-split">
+    <div id="date"> {{ post.date | date_to_string }} </div>
+  </div>
 
-<div class="right-split">
-  <h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
-  {{ post.content }} 
-</div>
-<div class="clear"></div>
+  <div class="right-split">
+    <h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
+    <article>
+      {{ post.content }} 
+    </article>
+  </div>
+  <div class="clear"></div>
 </div>
 {% endfor %}
