changed date to class

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Steve Jackson
 
 <div class="blog-post">
   <div class="left-split">
-    <div id="date"> {{ post.date | date_to_string }} </div>
+    <div class="date"> {{ post.date | date_to_string }} </div>
   </div>
 
   <div class="right-split">
