--- a/blog.html
+++ b/blog.html
@@ -27,7 +27,7 @@ title: Steve Jackson
 
 <div class="right-column">
   <div id="tweet">
-    testing 
+    <div class="twitterbutton"><a href="http://www.twitter.com/_sjackson"><img src="http://twitter-badges.s3.amazonaws.com/follow_me-a.png" alt="Follow _sjackson on Twitter"/></a></div><br/>
   </div>
 </div>
 
