--- a/blog-archive.html
+++ b/blog-archive.html
@@ -2,19 +2,30 @@
 layout: default
 title: Steve Jackson
 ---
-{% for post in site.posts %}
-
-<div class="blog-post">
-  <div class="left-split">
-    <div class="date"> {{ post.date | date_to_string }} </div>
-  </div>
-
-  <div class="right-split">
-    <h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
-    <article>
-      {{ post.content }} 
-    </article>
-  </div>
-  <div class="clear"></div>
+<div class="left-column">
+<div class="left-split">
+  &nbsp;
 </div>
-{% endfor %}
+
+<div class="right-split">
+  <h1>Blog Posts Archive</h1>
+  <br/>
+  <ul>
+    {% for post in site.posts %}
+
+    <li>{{ post.date | date_to_string }} - <a href="{{ post.url }}">{{ post.title }}</a></li>
+
+    {% endfor %}
+  </ul>
+</div>
+</div>
+
+<div class="right-column">
+  <div id="tweet">
+    <div class="twitterbutton"><a href="/blog-archive.html">Blog archive</a></div><br/>
+    <div class="twitterbutton"><a href="http://www.twitter.com/_sjackson"><img src="http://twitter-badges.s3.amazonaws.com/follow_me-a.png" alt="Follow _sjackson on Twitter"/></a></div><br/>
+  </div>
+  <br/><br/>
+</div>
+
+<div class="clear"></div>
