Added single blog post view. Added limit of 5 blog posts to primary blog view.

--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,7 @@ title: Steve Jackson
 ---
 <div class="left-column">
 
-  {% for post in site.posts %}
+  {% for post in site.posts limit:5 %}
 
   <div class="blog-post">
     <div class="left-split">
