--- a/index.html
+++ b/index.html
@@ -1,20 +1,51 @@
 ---
-layout: default
+layout: meta
 title: Steve Jackson
 ---
-{% for post in site.posts %}
+<body id="landing">
+  <div id="top-bar"></div>
 
-<div class="blog-post">
-  <div class="left-split">
-    <div class="date"> {{ post.date | date_to_string }} </div>
-  </div>
+  <div id="landing-upper"></div>
 
-  <div class="right-split">
-    <h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
-    <article>
-      {{ post.content }} 
-    </article>
+  <div id="wrapper">
+
+    <div class="right-split">
+      <div class="icons">
+        <ul>
+          <li><div class="iconcontainer"><a class="github" href="http://www.github.com/stevejackson"></a></div></li>
+          <li><div class="iconcontainer"><a class="linkedin" href="http://www.linkedin.com/in/sjackson7"></a></div></li>
+          <li><div class="iconcontainer"><a class="googleplus" href="https://profiles.google.com/114700593139486212398"></a></div></li>
+          <li><div class="iconcontainer"><a class="twitter" href="http://www.twitter.com/_sjackson"></a></div></li>
+        </ul>
+      </div>
+
+    </div>
+
+    <div class="clear"></div>
+
+    <div class="navwrap">
+      <ul class='navsub'>
+        <li><div class="navitem"><a href="/index.html">Home</a></div></li>
+        <li><div class="navitem"><a href="/blog.html">Blog</a></div></li>
+        <li><div class="navitem"><a href="/projects.html">Projects</a></div></li>
+        <li><div class="navitem"><a href="/about.html">About</a></div></li>
+      </ul>
+    </div>
+
+    <div class="landing">
+      <div class="landing-top">
+        <div class="header"><h3>Hey hey, I'm</h3> <h1>Steve Jackson</h1></div>
+      </div>
+
+      <div class="subheader"><h3>I do</h3> <h1>web development</h1></div>
+      <p>home page</p>
+      <div class="landing-bot">
+        <div class="subheader"><h3>I do</h3> <h1>web development</h1></div>
+        <p>home page</p>
+      </div>
+
+      <div id="landing-box">here i am</div>
+
+      <div class="clear"></div>
+    </div>
   </div>
-  <div class="clear"></div>
-</div>
-{% endfor %}
