--- a/index.html
+++ b/index.html
@@ -5,21 +5,7 @@ title: Steve Jackson
 <body id="landing">
   <div id="top-bar"></div>
 
-  <div id="landing-upper"></div>
-
   <div id="wrapper">
-
-    <div class="right-split">
-      <div class="icons">
-        <ul>
-          <li><div class="iconcontainer"><a class="github" href="http://www.github.com/stevejackson"></a></div></li>
-          <li><div class="iconcontainer"><a class="linkedin" href="http://www.linkedin.com/in/sjackson7"></a></div></li>
-          <li><div class="iconcontainer"><a class="googleplus" href="https://profiles.google.com/114700593139486212398"></a></div></li>
-          <li><div class="iconcontainer"><a class="twitter" href="http://www.twitter.com/_sjackson"></a></div></li>
-        </ul>
-      </div>
-
-    </div>
 
     <div class="clear"></div>
 
@@ -32,20 +18,13 @@ title: Steve Jackson
       </ul>
     </div>
 
-    <div class="landing">
-      <div class="landing-top">
-        <div class="header"><h3>Hey hey, I'm</h3> <h1>Steve Jackson</h1></div>
+    <div id="landing-content">
+      <div id="left-split">
+        left split
       </div>
 
-      <div class="subheader"><h3>I do</h3> <h1>web development</h1></div>
-      <p>home page</p>
-      <div class="landing-bot">
-        <div class="subheader"><h3>I do</h3> <h1>web development</h1></div>
-        <p>home page</p>
+      <div id="right-split">
+        right split
       </div>
-
-      <div id="landing-box">here i am</div>
-
-      <div class="clear"></div>
     </div>
   </div>
