Further worked on landing & content page.
Removed .css file; it's SASS generated and unnecessary in version
control.

--- a/index.html
+++ b/index.html
@@ -20,11 +20,34 @@ title: Steve Jackson
 
     <div id="landing-content">
       <div id="left-split">
-        left split
+        <div class="pic">
+          <img src="/img/me.jpg"/>
+        </div>
       </div>
 
       <div id="right-split">
-        right split
+        <div class="abovetext">Why, hello. I'm</div>
+        <div class="name"><h1>Steve Jackson</h1></div>
+        <div class="belowtext">and I love web development.</div>
+        <div class="widerule"></div>
+        <p>
+        I'm a web developer / programmer in love with Ruby on Rails.
+        </p>
+        <p>
+        Why don't you check out my <a href="/blog.html">blog</a>, take a look at some of my <a href="/projects.html">projects</a>, or read <a href="/about.html">about me</a>?
+        </p>
+        <p>
+        You could also connect with me on some social networks:
+        </p>
+        <p>
+        <div class="networklinks"><a href="">Twitter</a> <a href="">LinkedIn</a> <a href="">Github</a> <a href="">Last.fm</a> <a href="">Google +</a></div>
+        </p>
+
+        <p>
+        Or just <a href="">e-mail me</a>!
+        </p>
       </div>
+
+      <div class="clear"></div>
     </div>
   </div>
