--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@ title: Steve Jackson
 
   <p>Hey there, I'm Steve. That's me over there trying to be cool. I live in Indianapolis and love things.</p>
 
-  <p>I have experience in a variety of technology, but right now I'm in love with <em>Ruby</em>, <em>Rails</em>, and the plethora of great code surrounding it: <em>RSpec</em>, <em>Capybara</em>, <em>Factory Girl</em>, <em>Cucumber</em>, <em>SASS</em>, <em>Capistrano</em>, <em>jQuery</em>, etc.</p>
+  <p>I have experience in a variety of technology, but right now I'm in love with <em>Ruby</em>, <em>Rails</em>, and the plethora of great code surrounding it: <em>RSpec</em>, <em>Capybara</em>, <em>Factory Girl</em>, <em>SASS</em>, <em>Capistrano</em>, <em>jQuery</em>, etc.</p>
 
   <p>I also love <em>Vim</em>. Vim + Tea = Zen. I can't live without it.</p>
 
