Layout changes on landing. Removed unused images. Background change.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Steve Jackson
 <body id="landing">
   <div id="top-bar"></div>
 
-  <div id="wrapper">
+  <div id="wrapper-landing">
 
     <div class="clear"></div>
 
@@ -26,9 +26,8 @@ title: Steve Jackson
       </div>
 
       <div id="right-split">
-        <div class="abovetext">Why, hello. I'm</div>
+        <div class="abovetext"><span>Why, hello there. I'm</span></div>
         <div class="name"><h1>Steve Jackson</h1></div>
-        <div class="belowtext">and I love web development.</div>
         <div class="widerule"></div>
         <p>
         I'm a web developer / programmer in love with Ruby on Rails.
@@ -40,7 +39,7 @@ title: Steve Jackson
         You could also connect with me on some social networks:
         </p>
         <p>
-        <div class="networklinks"><a href="">Twitter</a> <a href="">LinkedIn</a> <a href="">Github</a> <a href="">Last.fm</a> <a href="">Google +</a></div>
+        <div class="networklinks"><a href="http://www.twitter.com/_sjackson">Twitter</a> <a href="http://www.linkedin.com/in/sjackson7">LinkedIn</a> <a href="http://www.github.com/stevejackson">Github</a> <a href="http://www.last.fm/user/sirsteveman">Last.fm</a> <a href="https://profiles.google.com/114700593139486212398">Google +</a></div>
         </p>
 
         <p>
