Deployment rakefile. Changed syntax highlighting. Image border radius class.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ title: Steve Jackson
     <div id="landing-content">
       <div id="left-split">
         <div class="pic">
-          <img src="/img/me.jpg"/>
+          <img class="highlightedImage" src="/img/me.jpg"/>
         </div>
       </div>
 
@@ -33,17 +33,17 @@ title: Steve Jackson
         I'm a web developer / programmer in love with Ruby on Rails.
         </p>
         <p>
-        Why don't you check out my <a href="/blog.html">blog</a>, take a look at some of my <a href="/projects.html">projects</a>, or read <a href="/about.html">about me</a>?
+        Why don't you check out my <a href="/blog.html">blog</a>, take a look at some of my most recent <a href="/projects.html">projects</a>, or read <a href="/about.html">about me</a>?
         </p>
         <p>
         You could also connect with me on some social networks:
         </p>
         <p>
-        <div class="networklinks"><a href="http://www.twitter.com/_sjackson">Twitter</a> <a href="http://www.linkedin.com/in/sjackson7">LinkedIn</a> <a href="http://www.github.com/stevejackson">Github</a> <a href="http://www.last.fm/user/sirsteveman">Last.fm</a> <a href="https://profiles.google.com/114700593139486212398">Google +</a></div>
+        <div class="networklinks"><a href="http://www.twitter.com/_sjackson">Twitter</a> <a href="http://www.linkedin.com/in/sjackson7">LinkedIn</a> <a href="http://www.github.com/stevejackson">github</a> <a href="http://www.last.fm/user/sirsteveman">Last.fm</a> <a href="https://profiles.google.com/114700593139486212398">Google +</a></div>
         </p>
 
         <p>
-        Or just <a href="">e-mail me</a>!
+        Or just <a href="mailto:steven.j.jackson@gmail.com">e-mail me</a>!
         </p>
       </div>
 
