--- a/about.html
+++ b/about.html
@@ -4,13 +4,13 @@ title: Steve Jackson
 ---
 <div class="left-column-about">
 
-  <img src="/img/me.jpg"/>
+  <img class="highlightedImage" src="/img/me.jpg"/>
 
-  <p>Hey there, I'm Steve. That's me over there trying to be cool. I live in Indianapolis and love things.</p>
+  <p>Hey there, I'm Steve. That's me over there trying to be cool. I live in Indianapolis and get excited about things.</p>
 
   <p>I have experience in a variety of technology, but right now I'm in love with <em>Ruby</em>, <em>Rails</em>, and the plethora of great code surrounding it: <em>RSpec</em>, <em>Capybara</em>, <em>Factory Girl</em>, <em>SASS</em>, <em>Capistrano</em>, <em>jQuery</em>, etc.</p>
 
-  <p>I also love <em>Vim</em>. Vim + Tea = Zen. I can't live without it.</p>
+  <p>I also love <em>Vim</em>. Vim + Tea = Zen. I can't live without it. I'm always seeking to expand my Vim-fu.</p>
 
   <p>This site was made with <a href="https://github.com/mojombo/jekyll">Jekyll</a>, an extra sweet tool written in Ruby. You can check out my code <a href="https://github.com/stevejackson/sjackson.net">here</a>.</p>
 
