Test posts removed. Fixed border below blog post.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ title: Steve Jackson
         <div class="name"><h1>Steve Jackson</h1></div>
         <div class="widerule"></div>
         <p>
-        I'm a web developer / programmer in love with Ruby on Rails.
+        I'm a web developer / programmer falling in love with Ruby on Rails.
         </p>
         <p>
         Why don't you check out my <a href="/blog.html">blog</a>, take a look at some of my most recent <a href="/projects.html">projects</a>, or read <a href="/about.html">about me</a>?
