Added emt2u project & revamped project page style.

--- a/projects.html
+++ b/projects.html
@@ -7,7 +7,7 @@ title: Steve Jackson
 
     <div class="project">
       <div class="image">
-        <a class="fb" href="/img/sites/cpcr.png" title="Cummins Power Club Rewards"><img src="/img/sites/cpcr.png" width="250" height="200"/></a>
+        <a class="fb" href="/img/sites/cpcr.png" title="Cummins Power Club Rewards"><img class="highlightedImage" src="/img/sites/cpcr.png"></a>
       </div>
       <div class="description">
         <h1>Cummins Power Club Rewards</h1>
@@ -17,6 +17,20 @@ title: Steve Jackson
         <p>
         An internal merchandise incentive program for Cummins Engines salespeople using JSP, PL/SQL, and Oracle. Employees earn points and then order rewards. Work done through Performance Strategies, Inc.
         </p>
+      </div>
+      <div class="clear"></div>
+    </div>
+
+    <div class="project">
+      <div class="image">
+        <a class="fb" href="/img/sites/emt2u.png" title="eManage Technologies"><img class="highlightedImage" src="/img/sites/emt2u.png"></a>
+      </div>
+      <div class="description">
+        <h1>eManage Technologies</h1>
+        <p>
+        <strong>I worked on: </strong>Setting up and adapting/expanding WordPress
+        </p>
+        <p>A small project for a company that wanted a small web presence. A sharp WordPress theme adapted to their needs got the job done.</p>
       </div>
       <div class="clear"></div>
     </div>
