Changed images of self. Edited some about-me text.

--- a/about.html
+++ b/about.html
@@ -4,9 +4,9 @@ title: Steve Jackson
 ---
 <div class="left-column-about">
 
-  <img class="highlightedImage" src="/img/me.jpg"/>
+  <img class="highlightedImage selfpic" src="/img/me3.jpg"/>
 
-  <p>Hey there, I'm Steve. That's me over there trying to be cool. I live in Indianapolis and get excited about things.</p>
+  <p>Hey there, I'm Steve. I'm the guy over there poppin' my collar and tying a tie. I live in Indianapolis and get excited about things.</p>
 
   <p>I have experience in a variety of technology, but right now I'm in love with <em>Ruby</em>, <em>Rails</em>, and the plethora of great code surrounding it: <em>RSpec</em>, <em>Capybara</em>, <em>Factory Girl</em>, <em>SASS</em>, <em>Capistrano</em>, <em>jQuery</em>, etc.</p>
 
