--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ title: Steve Jackson
     <div id="landing-content">
       <div id="left-split">
         <div class="pic">
-          <img class="highlightedImage" src="/img/me.jpg"/>
+          <img class="highlightedImage selfpic" src="/img/me2.jpg"/>
         </div>
       </div>
 
@@ -33,7 +33,7 @@ title: Steve Jackson
         I'm a web developer / programmer falling in love with Ruby on Rails.
         </p>
         <p>
-        Why don't you check out my <a href="/blog.html">blog</a>, take a look at some of my most recent <a href="/projects.html">projects</a>, or read <a href="/about.html">about me</a>?
+        Why don't you check out my <a href="/blog.html">blog</a>, take a look at some <a href="/projects.html">projects</a> I've worked on, or read <a href="/about.html">about me</a>?
         </p>
         <p>
         You could also connect with me on some social networks:
