Added MGR project.

--- a/projects.html
+++ b/projects.html
@@ -35,6 +35,19 @@ title: Steve Jackson
       <div class="clear"></div>
     </div>
 
+    <div class="project">
+      <div class="image">
+        <a class="fb" href="/img/sites/mgr.png" title="My Grower Rewards"><img class="highlightedImage" src="/img/sites/mgr.png"></a>
+      </div>
+      <div class="description">
+        <h1>My Grower Rewards</h1>
+        <p>
+        <strong>I worked on: </strong>Code, Database, JSP, PL/SQL
+        </p>
+        <p>A large, existing rebate program for calculating and delivering rebates to customers. I expanded it to include a new rebate type and rules structure, and various other back-end administration features. Work done through Performance Strategies, Inc.</p>
+      </div>
+      <div class="clear"></div>
+    </div>
   </div>
 </div>
 
