Blog post on mazery

--- a/projects.html
+++ b/projects.html
@@ -7,6 +7,20 @@ title: Steve Jackson
 
     <div class="project">
       <div class="image">
+        <a class="fb" href="/img/sites/mazery-large.png" title="Mazery"><img class="highlightedImage" src="/img/sites/mazery-large.png"></a>
+      </div>
+      <div class="description">
+        <h1>Mazery</h1>
+        <p>
+        <strong>Made with: </strong>HTML5, Javascript/CoffeeScript, jQuery, Compass
+        </p>
+        <p>A maze generation visualizer written to jump into CoffeeScript and play around with HTML5 Canvas.</p>
+      </div>
+      <div class="clear"></div>
+    </div>
+
+    <div class="project">
+      <div class="image">
         <a class="fb" href="/img/sites/cpcr.png" title="Cummins Power Club Rewards"><img class="highlightedImage" src="/img/sites/cpcr.png"></a>
       </div>
       <div class="description">
