updated projects page

--- a/projects.html
+++ b/projects.html
@@ -14,6 +14,9 @@ title: Steve Jackson
         <p>
         <strong>Made with: </strong>HTML5, Javascript/CoffeeScript, jQuery, Compass
         </p>
+        <p>
+          <a href="http://mazery.sjackson.net">Visit site</a>
+        </p>
         <p>A maze generation visualizer written to jump into CoffeeScript and play around with HTML5 Canvas.</p>
       </div>
       <div class="clear"></div>
