box-shadow transitions for images.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ title: Steve Jackson
     <div id="landing-content">
       <div id="left-split">
         <div class="pic">
-          <img class="highlightedImage selfpic" src="/img/me2.jpg"/>
+          <a class="fb img" href="/img/me2.jpg" title="Woah! Don't zoom in too far."><img class="highlightedImage selfpic" src="/img/me2.jpg"/></a>
         </div>
       </div>
 
