--- a/projects.html
+++ b/projects.html
@@ -7,7 +7,7 @@ title: Steve Jackson
 
     <div class="project">
       <div class="image">
-        <a class="fb" href="/img/sites/mazery-large.png" title="Mazery"><img class="highlightedImage" src="/img/sites/mazery-large.png"></a>
+        <a class="fb img" href="/img/sites/mazery-large.png" title="Mazery"><img class="highlightedImage" src="/img/sites/mazery-large.png"></a>
       </div>
       <div class="description">
         <h1>Mazery</h1>
@@ -24,7 +24,7 @@ title: Steve Jackson
 
     <div class="project">
       <div class="image">
-        <a class="fb" href="/img/sites/cpcr.png" title="Cummins Power Club Rewards"><img class="highlightedImage" src="/img/sites/cpcr.png"></a>
+        <a class="fb img" href="/img/sites/cpcr.png" title="Cummins Power Club Rewards"><img class="highlightedImage" src="/img/sites/cpcr.png"></a>
       </div>
       <div class="description">
         <h1>Cummins Power Club Rewards</h1>
@@ -40,7 +40,7 @@ title: Steve Jackson
 
     <div class="project">
       <div class="image">
-        <a class="fb" href="/img/sites/emt2u.png" title="eManage Technologies"><img class="highlightedImage" src="/img/sites/emt2u.png"></a>
+        <a class="fb img" href="/img/sites/emt2u.png" title="eManage Technologies"><img class="highlightedImage" src="/img/sites/emt2u.png"></a>
       </div>
       <div class="description">
         <h1>eManage Technologies</h1>
@@ -54,7 +54,7 @@ title: Steve Jackson
 
     <div class="project">
       <div class="image">
-        <a class="fb" href="/img/sites/mgr.png" title="My Grower Rewards"><img class="highlightedImage" src="/img/sites/mgr.png"></a>
+        <a class="fb img" href="/img/sites/mgr.png" title="My Grower Rewards"><img class="highlightedImage" src="/img/sites/mgr.png"></a>
       </div>
       <div class="description">
         <h1>My Grower Rewards</h1>
