Added srahhh.com to projects & editd about page verbiage

--- a/about.html
+++ b/about.html
@@ -8,13 +8,13 @@ title: Steve Jackson
 
   <p>Hey there, I'm Steve. I'm the guy over there poppin' my collar and tying a tie. I live in Indianapolis and get excited about things.</p>
 
-  <p>I have experience in a variety of technology, but right now I'm in love with <em>Ruby</em>, <em>Rails</em>, and the plethora of great code surrounding it: <em>RSpec</em>, <em>Capybara</em>, <em>Factory Girl</em>, <em>SASS</em>, <em>Capistrano</em>, <em>jQuery</em>, etc.</p>
+  <p>I have experience in a variety of technology, but right now I'm working with <em>HTML5/CSS3/Javascript</em>, <em>jQuery</em>, and <em>Ruby/Rails</em>. I like to dabble in neat things like <em>CoffeeScript</em> and <em>Sinatrtra</em>. I work with <em>Java</em>, <em>JSP</em>, and <em>PL/SQL</em> by day.
 
-  <p>I also love <em>Vim</em>. Vim + Tea = Zen. I can't live without it. I'm always seeking to expand my Vim-fu.</p>
+  <p>I also love <em>Vim</em>. Vim + Tea = Zen. I can't live without it.</p>
 
-  <p>This site was made with <a href="https://github.com/mojombo/jekyll">Jekyll</a>, an extra sweet tool written in Ruby. You can check out my code <a href="https://github.com/stevejackson/sjackson.net">here</a>.</p>
+  <p>This site was made with <a href="https://github.com/mojombo/jekyll">Jekyll</a>, an extra sweet tool written in Ruby. You can check out its code <a href="https://github.com/stevejackson/sjackson.net">here</a>.</p>
 
-  <p>If you want to contact me to talk about a cool project or work, feel free to shoot me an e-mail at steven.j.jackson at gmail.com - or ping me on any of the lovely social services above.</p>
+  <p>If you want to contact me to talk about a cool project or work, feel free to shoot me an e-mail at steven.j.jackson at gmail.com - or ping me on any of the lovely social services above!</p>
 
 </div>
 
