--- a/projects.html
+++ b/projects.html
@@ -24,6 +24,23 @@ title: Steve Jackson
 
     <div class="project">
       <div class="image">
+        <a class="fb img" href="/img/sites/srahhh-large.png" title="Srahhh"><img class="highlightedImage" src="/img/sites/srahhh-small.png"></a>
+      </div>
+      <div class="description">
+        <h1>Srahhh Portfolio</h1>
+        <p>
+        <strong>Made with: </strong>WordPress, PHP, jQuery, HTML/CSS
+        </p>
+        <p>
+          <a href="http://srahhh.com">Visit site</a>
+        </p>
+        <p>Developed a custom WordPress theme from the ground up for Sarah's portfolio site, based off her design.</p>
+      </div>
+      <div class="clear"></div>
+    </div>
+
+    <div class="project">
+      <div class="image">
         <a class="fb img" href="/img/sites/cpcr.png" title="Cummins Power Club Rewards"><img class="highlightedImage" src="/img/sites/cpcr.png"></a>
       </div>
       <div class="description">
