--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@ title: Steve Jackson
 
   <p>Hey there, I'm Steve. I'm the guy over there poppin' my collar and tying a tie. I live in Indianapolis and get excited about things.</p>
 
-  <p>I have experience in a variety of technology, but right now I'm working with <em>HTML5/CSS3/Javascript</em>, <em>jQuery</em>, and <em>Ruby/Rails</em>. I like to dabble in neat things like <em>CoffeeScript</em> and <em>Sinatrtra</em>. I work with <em>Java</em>, <em>JSP</em>, and <em>PL/SQL</em> by day.
+  <p>I have experience in a variety of technology, but right now I'm working with <em>HTML5/CSS3/Javascript</em>, <em>jQuery</em>, and <em>Ruby/Rails</em>. I like to dabble in neat things like <em>CoffeeScript</em> and <em>Sinatra</em>. I work with <em>Java</em>, <em>JSP</em>, and <em>PL/SQL</em> by day.
 
   <p>I also love <em>Vim</em>. Vim + Tea = Zen. I can't live without it.</p>
 
