Added Chinese Dictator to projects page.
Updated intro text.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ title: Steve Jackson
         <div class="name"><h1>Steve Jackson</h1></div>
         <div class="widerule"></div>
         <p>
-        I'm a web developer / programmer falling in love with Ruby on Rails.
+        I'm a web developer. I love working with Ruby and Rails, and I'm trying to learn photography.
         </p>
         <p>
         Why don't you check out my <a href="/blog.html">blog</a>, take a look at some <a href="/projects.html">projects</a> I've worked on, or read <a href="/about.html">about me</a>?
