--- a/projects.html
+++ b/projects.html
@@ -7,6 +7,26 @@ title: Steve Jackson
 
     <div class="project">
       <div class="image">
+        <a class="fb img" href="/img/sites/chinesedictator-large.png" title="Mazery"><img class="highlightedImage" src="/img/sites/chinesedictator-small.png"></a>
+      </div>
+      <div class="description">
+        <h1>Chinese Dictator</h1>
+        <p>
+        <strong>Made with: </strong>Ruby, Rails, Heroku, HTML5/CSS3/jQuery, HAML/SASS
+        </p>
+        <p>
+          <a href="http://chinesedictator.com">Visit site</a>
+        </p>
+        <p>A tool for helping overcome a specific challenge for learners of Mandarin Chinese: listening skills.
+        The syllables and tones don't match what we're used to, and it takes practice to be able to differentiate
+        them. It even allows you to filter data by troubling syllable initials/finals, such as 'q' and 'ch'. Data is
+        scraped from ChinesePod.</p>
+      </div>
+      <div class="clear"></div>
+    </div>
+
+    <div class="project">
+      <div class="image">
         <a class="fb img" href="/img/sites/mazery-large.png" title="Mazery"><img class="highlightedImage" src="/img/sites/mazery-large.png"></a>
       </div>
       <div class="description">
