Added ChineseDictator and 500flow. Added thumbnails for all projects.

--- a/projects.html
+++ b/projects.html
@@ -7,7 +7,7 @@ title: Steve Jackson
 
     <div class="project">
       <div class="image">
-        <a class="fb img" href="/img/sites/chinesedictator-large.png" title="Mazery"><img class="highlightedImage" src="/img/sites/chinesedictator-small.png"></a>
+        <a class="fb img" href="/img/sites/chinesedictator-large.png" title="Chinese Dictator"><img class="highlightedImage" src="/img/sites/chinesedictator-small.png"></a>
       </div>
       <div class="description">
         <h1>Chinese Dictator</h1>
@@ -27,7 +27,25 @@ title: Steve Jackson
 
     <div class="project">
       <div class="image">
-        <a class="fb img" href="/img/sites/mazery-large.png" title="Mazery"><img class="highlightedImage" src="/img/sites/mazery-large.png"></a>
+        <a class="fb img" href="/img/sites/500flow-large.png" title="500flow"><img class="highlightedImage" src="/img/sites/500flow-small.png"></a>
+      </div>
+      <div class="description">
+        <h1>500flow</h1>
+        <p>
+        <strong>Made with: </strong>Ruby, Sinatra, jQuery, HTML5/CSS3
+        </p>
+        <p>
+          <a href="http://500flow.sjackson.net">Visit site</a>
+        </p>
+        <p>A quick site I made for pulling photos from the 500px API and infinitely scrolling through them, creating a seamless
+        viewing experience.</p>
+      </div>
+      <div class="clear"></div>
+    </div>
+
+    <div class="project">
+      <div class="image">
+        <a class="fb img" href="/img/sites/mazery-large.png" title="Mazery"><img class="highlightedImage" src="/img/sites/mazery-small.png"></a>
       </div>
       <div class="description">
         <h1>Mazery</h1>
@@ -61,7 +79,7 @@ title: Steve Jackson
 
     <div class="project">
       <div class="image">
-        <a class="fb img" href="/img/sites/cpcr.png" title="Cummins Power Club Rewards"><img class="highlightedImage" src="/img/sites/cpcr.png"></a>
+        <a class="fb img" href="/img/sites/cpcr-large.png" title="Cummins Power Club Rewards"><img class="highlightedImage" src="/img/sites/cpcr-small.png"></a>
       </div>
       <div class="description">
         <h1>Cummins Power Club Rewards</h1>
@@ -77,7 +95,7 @@ title: Steve Jackson
 
     <div class="project">
       <div class="image">
-        <a class="fb img" href="/img/sites/emt2u.png" title="eManage Technologies"><img class="highlightedImage" src="/img/sites/emt2u.png"></a>
+        <a class="fb img" href="/img/sites/emt2u-large.png" title="eManage Technologies"><img class="highlightedImage" src="/img/sites/emt2u-small.png"></a>
       </div>
       <div class="description">
         <h1>eManage Technologies</h1>
@@ -91,7 +109,7 @@ title: Steve Jackson
 
     <div class="project">
       <div class="image">
-        <a class="fb img" href="/img/sites/mgr.png" title="My Grower Rewards"><img class="highlightedImage" src="/img/sites/mgr.png"></a>
+        <a class="fb img" href="/img/sites/mgr-large.png" title="My Grower Rewards"><img class="highlightedImage" src="/img/sites/mgr-small.png"></a>
       </div>
       <div class="description">
         <h1>My Grower Rewards</h1>
