update bad verbiage, remove unused social networks.

--- a/index.html
+++ b/index.html
@@ -30,20 +30,23 @@ title: Steve Jackson
         <div class="name"><h1>Steve Jackson</h1></div>
         <div class="widerule"></div>
         <p>
-        I'm a web developer. I love working with Ruby and Rails, and I'm trying to learn photography.
+        I'm a web developer. I work with Ruby and Rails and like learning languages.
         </p>
         <p>
         Why don't you check out my <a href="/blog.html">blog</a>, take a look at some <a href="/projects.html">projects</a> I've worked on, or read <a href="/about.html">about me</a>?
         </p>
         <p>
-        You could also connect with me on some social networks:
+          I am not an active social networker, but you can still check out a couple places:
         </p>
         <p>
-        <div class="networklinks"><a href="http://www.twitter.com/_sjackson">Twitter</a> <a href="http://www.linkedin.com/in/sjackson7">LinkedIn</a> <a href="http://www.github.com/stevejackson">github</a> <a href="http://www.last.fm/user/sirsteveman">Last.fm</a> <a href="https://profiles.google.com/114700593139486212398">Google +</a></div>
+        <div class="networklinks">
+          <a href="http://www.github.com/stevejackson">Github</a>
+          <a href="http://www.linkedin.com/in/sjackson7">LinkedIn</a>
+        </div>
         </p>
 
         <p>
-        Or just <a href="mailto:steven.j.jackson@gmail.com">e-mail me</a>!
+          Or, even better, just <a href="mailto:steven.j.jackson@gmail.com">e-mail me</a>!
         </p>
       </div>
 
