--- a/about.html
+++ b/about.html
@@ -6,15 +6,30 @@ title: Steve Jackson
 
   <img class="highlightedImage selfpic" src="/img/me3.jpg"/>
 
-  <p>Hey there, I'm Steve. I'm the guy over there poppin' my collar and tying a tie. I live in Indianapolis and get excited about things.</p>
+  <p>Hey there, I'm Steve.</p>
 
-  <p>I have experience in a variety of technology, but right now I'm working with <em>HTML5/CSS3/Javascript</em>, <em>jQuery</em>, and <em>Ruby/Rails</em>. I like to dabble in neat things like <em>CoffeeScript</em> and <em>Sinatra</em>. I work with <em>Java</em>, <em>JSP</em>, and <em>PL/SQL</em> by day.
+  <p>I work with <em>Ruby/Rails</em>, <em>HTML5/CSS3/Javascript</em>, and <em>jQuery</em>. I sometimes use things like <em>CoffeeScript</em>, <em>Sinatra</em>, and various ruby gems. In the past, I've used other things like C++, OpenGL, C#, XNA, and Java.
 
-  <p>I also love <em>Vim</em>. Vim + Tea = Zen. I can't live without it.</p>
+  <p>This site was made with <a href="https://github.com/mojombo/jekyll">Jekyll</a>. You can check out this site's code <a href="https://github.com/stevejackson/sjackson.net">here</a>.</p>
 
-  <p>This site was made with <a href="https://github.com/mojombo/jekyll">Jekyll</a>, an extra sweet tool written in Ruby. You can check out its code <a href="https://github.com/stevejackson/sjackson.net">here</a>.</p>
+  <p>If you want to contact me to talk about anything, feel free to shoot me an e-mail at steven.j.jackson at gmail.com!</p>
 
-  <p>If you want to contact me to talk about a cool project or work, feel free to shoot me an e-mail at steven.j.jackson at gmail.com - or ping me on any of the lovely social services above!</p>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
 
 </div>
 
