update personal e-mail address

--- a/about.html
+++ b/about.html
@@ -6,13 +6,15 @@ title: Steve Jackson
 
   <img class="highlightedImage selfpic" src="/img/me3.jpg"/>
 
-  <p>Hey there, I'm Steve.</p>
-
-  <p>I work with <em>Ruby/Rails</em>, <em>HTML5/CSS3/Javascript</em>, and <em>jQuery</em>. I sometimes use things like <em>CoffeeScript</em>, <em>Sinatra</em>, and various ruby gems. In the past, I've used other things like C++, OpenGL, C#, XNA, and Java.
+  <p>
+    I'm a full stack web developer working with <em>Ruby/Rails</em> and <em>HTML5/CSS3/Javascript</em>. I use CoffeeScript and a plethora of ruby gems. In the past, I've used other things like C++, OpenGL, C#, XNA, and Java.
+  </p>
 
   <p>This site was made with <a href="https://github.com/mojombo/jekyll">Jekyll</a>. You can check out this site's code <a href="https://github.com/stevejackson/sjackson.net">here</a>.</p>
 
-  <p>If you want to contact me to talk about anything, feel free to shoot me an e-mail at steven.j.jackson at gmail.com!</p>
+  <p>
+    If you want to contact me to talk about anything, feel free to shoot me an e-mail at <a href="mailto:steve@sjackson.net">steve@sjackson.net</a>!
+  </p>
 
   <br>
   <br>
