--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ title: Steve Jackson
         </p>
 
         <p>
-          Or, even better, just <a href="mailto:steven.j.jackson@gmail.com">e-mail me</a>!
+          Or, even better, just <a href="mailto:steve@sjackson.net">e-mail me</a>!
         </p>
       </div>
 
