--- a/index.html
+++ b/index.html
@@ -3,53 +3,57 @@ layout: meta
 title: Steve Jackson
 ---
 <body id="landing">
-  <div id="top-bar"></div>
 
-  <div id="wrapper-landing">
+  <div class="wrapper">
+
+    <header>
+
+      <h1>Kang Yu Chen</h1>
+      <div class="links">
+        <a href="http://www.github.com/stevejackson">Github</a>
+        /
+        <a href="mailto:steve@sjackson.net">E-mail</a>
+      </div>
+
+    </header>
 
     <div class="clear"></div>
 
-    <div class="navwrap">
-      <ul class='navsub'>
-        <li><div class="navitem"><a href="/index.html">Home</a></div></li>
-        <li><div class="navitem"><a href="/blog.html">Blog</a></div></li>
-        <li><div class="navitem"><a href="/projects.html">Projects</a></div></li>
-        <li><div class="navitem"><a href="/about.html">About</a></div></li>
-      </ul>
+    <nav>
+      <span class='first'><a href="/index.html">Home</a></span>
+      /
+      <span><a href="/projects.html">Projects</a></span>
     </div>
 
     <div id="landing-content">
-      <div id="left-split">
-        <div class="pic">
-          <a class="fb img" href="/img/me2.jpg" title="Woah! Don't zoom in too far."><img class="highlightedImage selfpic" src="/img/me2.jpg"/></a>
-        </div>
-      </div>
-
-      <div id="right-split">
-        <div class="abovetext"><span>Why, hello there. I'm</span></div>
-        <div class="name"><h1>Steve Jackson</h1></div>
-        <div class="widerule"></div>
-        <p>
-        I'm a web developer. I work with Ruby and Rails and like learning languages.
-        </p>
-        <p>
-        Why don't you check out my <a href="/blog.html">blog</a>, take a look at some <a href="/projects.html">projects</a> I've worked on, or read <a href="/about.html">about me</a>?
-        </p>
-        <p>
-          I am not an active social networker, but you can still check out a couple places:
-        </p>
-        <p>
-        <div class="networklinks">
-          <a href="http://www.github.com/stevejackson">Github</a>
-          <a href="http://www.linkedin.com/in/sjackson7">LinkedIn</a>
-        </div>
-        </p>
-
-        <p>
-          Or, even better, just <a href="mailto:steve@sjackson.net">e-mail me</a>!
-        </p>
-      </div>
-
-      <div class="clear"></div>
     </div>
+
   </div>
+
+  <div class="rule"></div>
+
+
+  <div class="wrapper">
+
+    <div class="content">
+
+      <div class="landing-left-image">
+        <img src="img/me3.jpg" width="240" height="322" />
+      </div>
+
+      <div class="landing-right">
+        <p>
+          I'm a web developer and linguist from America. I'm currently a student at Sichuan University in China.
+        </p>
+
+        <br>
+
+        <p>
+          I am experienced in Ruby/Rails development, both front and back-end.
+        </p>
+      </div>
+
+    </div>
+
+  </div>
+
