--- a/projects.html
+++ b/projects.html
@@ -1,126 +1,179 @@
 ---
-layout: default
+layout: meta
 title: Steve Jackson
 ---
-<div class="left-column">
-  <div class="projects">
+<body id="landing">
 
-    <div class="project">
-      <div class="image">
-        <a class="fb img" href="/img/sites/chinesedictator-large.png" title="Chinese Dictator"><img class="highlightedImage" src="/img/sites/chinesedictator-small.png"></a>
+  <div class="wrapper">
+
+    <header>
+
+      <h1>Kang Yu Chen</h1>
+      <div class="links">
+        <a href="http://www.github.com/stevejackson">Github</a>
+        /
+        <a href="mailto:steve@sjackson.net">E-mail</a>
       </div>
-      <div class="description">
-        <h1>Chinese Dictator</h1>
-        <p>
-        <strong>Made with: </strong>Ruby, Rails, Heroku, HTML5/CSS3/jQuery, HAML/SASS
-        </p>
-        <p>
-          <a href="http://chinesedictator.com">Visit site</a>
-        </p>
-        <p>A tool for helping overcome a specific challenge for learners of Mandarin Chinese: listening skills.
-        The syllables and tones don't match what we're used to, and it takes practice to be able to differentiate
-        them. It even allows you to filter data by troubling syllable initials/finals, such as 'q' and 'ch'. Data is
-        scraped from ChinesePod.</p>
-      </div>
-      <div class="clear"></div>
+
+    </header>
+
+    <div class="clear"></div>
+    <nav>
+      <span class='first'><a href="/index.html">Home</a></span>
+      /
+      <span><a href="/projects.html">Projects</a></span>
     </div>
 
-    <div class="project">
-      <div class="image">
-        <a class="fb img" href="/img/sites/500flow-large.png" title="500flow"><img class="highlightedImage" src="/img/sites/500flow-small.png"></a>
-      </div>
-      <div class="description">
-        <h1>500flow</h1>
-        <p>
-        <strong>Made with: </strong>Ruby, Sinatra, jQuery, HTML5/CSS3
-        </p>
-        <p>
-          <a href="http://500flow.sjackson.net">Visit site</a>
-        </p>
-        <p>A quick site I made for pulling photos from the 500px API and infinitely scrolling through them, creating a seamless
-        viewing experience.</p>
-      </div>
-      <div class="clear"></div>
+    <div id="landing-content">
     </div>
 
-    <div class="project">
-      <div class="image">
-        <a class="fb img" href="/img/sites/mazery-large.png" title="Mazery"><img class="highlightedImage" src="/img/sites/mazery-small.png"></a>
+  </div>
+
+  <div class="rule"></div>
+
+
+<div class="wrapper">
+  <div class="content">
+
+    <div class="left-column">
+      <div class="projects">
+
+        <div class="project">
+          <div class="image">
+            <a class="fb img" href="/img/sites/immerser-large.png" title="Immerser"><img class="highlightedImage" src="/img/sites/immerser-small.png"></a>
+          </div>
+          <div class="description">
+            <p class="header">
+              <span class="project-title">Immerser</span>
+              -
+              <a href="https://www.immerser.net">Visit site</a>
+            </p>
+
+            <p class="made-with">
+              <strong>Made with: </strong>
+              <span class="tech">Ruby, Rails, RSpec, Postgres, jQuery</span>
+            </p>
+
+            <p>
+              Immerser is an app to aid with every aspect of reading Chinese. It helps you track your vocabulary,
+              and uses its knowledge of your vocabulary to recommend reading material appropriate for your
+              reading level.
+            </p>
+          </div>
+
+          <div class="clear"></div>
+        </div>
+
+
+
+
+        <div class="project">
+          <div class="image">
+            <a class="fb img" href="/img/sites/chinesedictator-large.png" title="Chinese Dictator"><img class="highlightedImage" src="/img/sites/chinesedictator-small.png"></a>
+          </div>
+          <div class="description">
+            <p class="header">
+              <span class="project-title">Chinese Dictator</span>
+              -
+              <a href="http://chinesedictator.com">Visit site</a>
+              -
+              <a href="http://github.com/stevejackson/chinesedictator">Github</a>
+            </p>
+
+            <p class="made-with">
+              <strong>Made with: </strong>
+              <span class="tech">Ruby, Rails, Heroku, HTML5/CSS3/jQuery, HAML/SASS</span>
+            </p>
+
+            <p>
+              A tool to help overcome a specific challenge for learners of Mandarin Chinese: listening skills.
+              The syllables and tones don't match what we're used to, and it takes practice to be able to differentiate
+              them. It even allows you to filter data by troubling syllable initials/finals, such as 'q' and 'ch'. Data is scraped from ChinesePod.
+            </p>
+          </div>
+
+          <div class="clear"></div>
+        </div>
+
+        <div class="project">
+          <div class="image">
+            <a class="fb img" href="/img/sites/500flow-large.png" title="500flow"><img class="highlightedImage" src="/img/sites/500flow-small.png"></a>
+          </div>
+          <div class="description">
+            <p class="header">
+              <span class="project-title">500flow</span>
+              -
+              <a href="http://500flow.kangyuchen.com">Visit site</a>
+              -
+              <a href="http://github.com/stevejackson/500flow">Github</a>
+            </p>
+
+            <p class="made-with">
+              <strong>Made with: </strong>
+              <span class="tech">Ruby, Sinatra, jQuery, HTML5/CSS3</span>
+            </p>
+
+            <p>
+              Pulls photos from the 500px API and infinitely scrolls through them, creating a seamless viewing experience.
+            </p>
+          </div>
+          <div class="clear"></div>
+        </div>
+
+        <div class="project">
+
+          <div class="image">
+            <a class="fb img" href="/img/sites/mazery-large.png" title="Mazery"><img class="highlightedImage" src="/img/sites/mazery-small.png"></a>
+          </div>
+
+          <div class="description">
+            <p class="header">
+              <span class="project-title">Mazery</span>
+              -
+              <a href="http://mazery.kangyuchen.com">Visit site</a>
+              -
+              <a href="http://github.com/stevejackson/mazery">Github</a>
+            </p>
+
+            <p class="made-with">
+              <strong>Made with: </strong>
+              <span class="tech">HTML5, Javascript/CoffeeScript, jQuery, Compass</span>
+            </p>
+
+            <p>
+              A maze generation visualizer written to jump into CoffeeScript and play around with HTML5 Canvas.
+            </p>
+          </div>
+          <div class="clear"></div>
+        </div>
+
+        <div class="project">
+
+          <div class="image">
+            <a class="fb img" href="/img/sites/srahhh-large.png" title="Srahhh"><img class="highlightedImage" src="/img/sites/srahhh-small.png"></a>
+          </div>
+
+          <div class="description">
+            <p class="header">
+              <span class="project-title">Srahhh Portfolio</span>
+            <p>
+
+            <p class="made-with">
+              <strong>Made with: </strong>
+              <span class="tech">WordPress, PHP, jQuery, HTML/CSS</span>
+            </p>
+
+            <p>
+              Developed a custom WordPress theme from the ground up for Sarah's portfolio site, based off her design.
+            </p>
+          </div>
+          <div class="clear"></div>
+        </div>
+
       </div>
-      <div class="description">
-        <h1>Mazery</h1>
-        <p>
-        <strong>Made with: </strong>HTML5, Javascript/CoffeeScript, jQuery, Compass
-        </p>
-        <p>
-          <a href="http://mazery.sjackson.net">Visit site</a>
-        </p>
-        <p>A maze generation visualizer written to jump into CoffeeScript and play around with HTML5 Canvas.</p>
-      </div>
-      <div class="clear"></div>
     </div>
 
-    <div class="project">
-      <div class="image">
-        <a class="fb img" href="/img/sites/srahhh-large.png" title="Srahhh"><img class="highlightedImage" src="/img/sites/srahhh-small.png"></a>
-      </div>
-      <div class="description">
-        <h1>Srahhh Portfolio</h1>
-        <p>
-        <strong>Made with: </strong>WordPress, PHP, jQuery, HTML/CSS
-        </p>
-        <p>
-          <a href="http://srahhh.com">Visit site</a>
-        </p>
-        <p>Developed a custom WordPress theme from the ground up for Sarah's portfolio site, based off her design.</p>
-      </div>
-      <div class="clear"></div>
-    </div>
+    <div class="clear"></div>
 
-    <div class="project">
-      <div class="image">
-        <a class="fb img" href="/img/sites/cpcr-large.png" title="Cummins Power Club Rewards"><img class="highlightedImage" src="/img/sites/cpcr-small.png"></a>
-      </div>
-      <div class="description">
-        <h1>Cummins Power Club Rewards</h1>
-        <p>
-        <strong>I worked on: </strong>Code, Database, JSP, PL/SQL
-        </p>
-        <p>
-        An internal merchandise incentive program for Cummins Engines salespeople using JSP, PL/SQL, and Oracle. Employees earn points and then order rewards. Work done through Performance Strategies, Inc.
-        </p>
-      </div>
-      <div class="clear"></div>
-    </div>
-
-    <div class="project">
-      <div class="image">
-        <a class="fb img" href="/img/sites/emt2u-large.png" title="eManage Technologies"><img class="highlightedImage" src="/img/sites/emt2u-small.png"></a>
-      </div>
-      <div class="description">
-        <h1>eManage Technologies</h1>
-        <p>
-        <strong>I worked on: </strong>Setting up and adapting/expanding WordPress
-        </p>
-        <p>A small project for a company that wanted a small web presence. A sharp WordPress theme adapted to their needs got the job done.</p>
-      </div>
-      <div class="clear"></div>
-    </div>
-
-    <div class="project">
-      <div class="image">
-        <a class="fb img" href="/img/sites/mgr-large.png" title="My Grower Rewards"><img class="highlightedImage" src="/img/sites/mgr-small.png"></a>
-      </div>
-      <div class="description">
-        <h1>My Grower Rewards</h1>
-        <p>
-        <strong>I worked on: </strong>Code, Database, JSP, PL/SQL
-        </p>
-        <p>A large, existing rebate program for calculating and delivering rebates to customers. I expanded it to include a new rebate type and rules structure, and various other back-end administration features. Work done through Performance Strategies, Inc.</p>
-      </div>
-      <div class="clear"></div>
-    </div>
   </div>
 </div>
-
-<div class="clear"></div>
