--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: meta
-title: Steve Jackson
+title: Kang Yu Chen
 ---
 <body id="landing">
 
@@ -49,7 +49,7 @@ title: Steve Jackson
         <br>
 
         <p>
-          I am experienced in Ruby/Rails development, both front and back-end.
+          I am experienced in full-stack Ruby/Rails development.
         </p>
       </div>
 
