--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: Kang Yu Chen
 
     <header>
 
-      <h1>Kang Yu Chen</h1>
+      <h1><a href="/index.html">Kang Yu Chen</a></h1>
       <div class="links">
         <a href="http://www.github.com/stevejackson">Github</a>
         /
