Change page header to "Steve Jackson"

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: meta
-title: Kang Yu Chen
+title: Steve Jackson
 ---
 <body id="landing">
 
@@ -8,7 +8,7 @@ title: Kang Yu Chen
 
     <header>
 
-      <h1><a href="/index.html">Kang Yu Chen</a></h1>
+      <h1><a href="/index.html">Steve Jackson</a></h1>
       <div class="links">
         <a href="http://www.github.com/stevejackson">Github</a>
         /
@@ -43,13 +43,13 @@ title: Kang Yu Chen
 
       <div class="landing-right">
         <p>
-          I'm a web developer and linguist from America. I'm currently a student at Sichuan University in China.
+          I'm a web developer and language learner from America. I'm currently a student at Sichuan University in China.
         </p>
 
         <br>
 
         <p>
-          I am experienced in full-stack Ruby/Rails development.
+          I'm experienced in full-stack Ruby/Rails development.
         </p>
       </div>
 
