--- a/server/projects.html
+++ b/server/projects.html
@@ -1,14 +1,44 @@
----
-layout: meta
-title: Steve Jackson
----
-<body id="landing">
+<!doctype html>
+
+<!--[if lt IE 7 ]> <html class="ie ie6 no-js" lang="en"> <![endif]-->
+<!--[if IE 7 ]>    <html class="ie ie7 no-js" lang="en"> <![endif]-->
+<!--[if IE 8 ]>    <html class="ie ie8 no-js" lang="en"> <![endif]-->
+<!--[if IE 9 ]>    <html class="ie ie9 no-js" lang="en"> <![endif]-->
+<!--[if gt IE 9]><!--><html class="no-js" lang="en"><!--<![endif]-->
+<!-- the "no-js" class is for Modernizr. -->
+
+<head id="www-sjackson-net" data-template-set="html5-reset">
+
+  <meta charset="utf-8">
+
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+
+  <title>Kang Yu Chen</title>
+
+  <meta name="title" content="Steve Jackson">
+  <meta name="description" content="I'm a web developer with a love for Ruby on Rails.">
+  <meta name="author" content="Steve Jackson">
+  <meta name="copyright" content="Copyright Steve Jackson 2011. All Rights Reserved.">
+
+  <link rel="stylesheet" href="/css/htmlreset.css">
+  <link rel="stylesheet" href="/css/layout.css">
+  <link rel="stylesheet" href="/css/syntax.css">
+  <link rel="stylesheet" href="/fancybox/jquery.fancybox-1.3.4.css">
+
+  <script src="/js/modernizr-1.7.min.js"></script>
+  <script type="text/javascript" src="http://use.typekit.com/nnc7pcl.js"></script>
+  <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+</head>
+
+<body>
+
+  <body id="landing">
 
   <div class="wrapper">
 
     <header>
 
-      <h1><a href="/index.html">Steve Jackson</a></h1>
+      <h1><a href="/index.html">Kang Yu Chen</a></h1>
       <div class="links">
         <a href="http://www.github.com/stevejackson">Github</a>
         /
@@ -177,3 +207,30 @@ title: Steve Jackson
 
   </div>
 </div>
+
+  <script src="/js/jquery-1.5.1.min.js"></script>
+  <script src="/js/functions.js" type="text/javascript"></script>
+  <script src="/fancybox/jquery.fancybox-1.3.4.pack.js"></script>
+
+  <script>
+
+    $(document).ready(function() {
+      $("a.fb").fancybox({
+        'titlePosition': 'inside',
+      });
+    });
+
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-2995032-2']);
+    _gaq.push(['_trackPageview']);
+
+    (function() {
+      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+    })();
+
+  </script>
+
+</body>
+</html>
