Progress on redesign.

--- a/index.html
+++ b/index.html
@@ -29,3 +29,26 @@ layout: empty
   </section>
 
 </header>
+
+<section id="features_row_1">
+  <div class="feature">
+    <h3>Blah</h3>
+    <p>
+      Blah blah blah blah blah
+    </p>
+  </div>
+
+  <div class="feature">
+    <h3>Blah</h3>
+    <p>
+      Blah blah blah blah blah
+    </p>
+  </div>
+
+  <div class="feature">
+    <h3>Blah</h3>
+    <p>
+      Blah blah blah blah blah
+    </p>
+  </div>
+</section>
