Progress on redesign

--- a/index.html
+++ b/index.html
@@ -30,25 +30,27 @@ layout: empty
 
 </header>
 
-<section id="features_row_1">
-  <div class="feature">
-    <h3>Blah</h3>
-    <p>
-      Blah blah blah blah blah
-    </p>
-  </div>
+<section id='features_row_1'>
+  <div id="wrapper">
+    <div class="feature">
+      <h3>Blah</h3>
+      <p>
+        Blah blah blah blah blah
+      </p>
+    </div>
 
-  <div class="feature">
-    <h3>Blah</h3>
-    <p>
-      Blah blah blah blah blah
-    </p>
-  </div>
+    <div class="feature">
+      <h3>Blah</h3>
+      <p>
+        Blah blah blah blah blah
+      </p>
+    </div>
 
-  <div class="feature">
-    <h3>Blah</h3>
-    <p>
-      Blah blah blah blah blah
-    </p>
-  </div>
-</section>
+    <div class="feature">
+      <h3>Blah</h3>
+      <p>
+        Blah blah blah blah blah
+      </p>
+    </div>
+  </section>
+</div>
